classDiagram
    %% ============================================
    %% ML COMPONENTS VIEW
    %% Focus: Machine Learning Detection Pipeline
    %% ============================================

    class SupervisedMLStrategy {
        +backend: IMLBackend
        +significance_threshold: float
        +__init__(backend: IMLBackend, significance_threshold: float)
        +diagnose(data_mgr: DataManager) List~Diagnosis~
        +get_required_metrics() List~str~
    }

    class IMLBackend {
        <<interface>>
        +train(labelled_csv_paths: List~str~, window_size: int, step_size: int, severity_threshold: float) None
        +predict_probabilities(window_df: DataFrame) dict~str, float~
        +save(path: str) None
        +load(path: str) IMLBackend$
    }

    class DefaultBackend {
        -_classifier: ClassifierMixin
        -_models: dict~str, ClassifierMixin~
        -_feature_cols: dict~str, List~str~~
        -_fc_params: dict
        +__init__(classifier: ClassifierMixin)
        +train(labelled_csv_paths: List~str~, window_size: int, step_size: int, severity_threshold: float) None
        +predict_probabilities(window_df: DataFrame) dict~str, float~
        +save(path: str) None
        +load(path: str) DefaultBackend$
    }

    class DataManager {
        +job_data: DataFrame
        +job_id: str
        +get_metric(group: str, metric: str, trace: str) Series
        +get_flat_dataframe(interval_seconds: int) DataFrame
        +iterate_windows(window_size: int, step_size: int) Generator
    }

    class Diagnosis {
        <<dataclass>>
        +bottleneck_type: BottleneckType
        +severity_score: float
        +confidence: float
        +source: str
        +is_healthy: bool
        +is_unknown: bool
    }

    class BottleneckType {
        <<enumeration>>
        PIPELINE_STALL
        COMPUTE_UNDERUTILIZATION
        PRECISION_WASTE
        BRANCH_MISPREDICTION
        CACHE_PRESSURE
        INTRA_NODE_LOAD_IMBALANCE
        INTER_NODE_LOAD_IMBALANCE
        NONE
        UNKNOWN
        +get_macro_category() MacroCategoryType
    }

    %% Relationships
    SupervisedMLStrategy *-- IMLBackend : backend
    SupervisedMLStrategy --> DataManager : uses
    SupervisedMLStrategy --> Diagnosis : produces

    IMLBackend <|.. DefaultBackend : implements

    DataManager --> DefaultBackend : window_df via get_flat_dataframe

    Diagnosis --> BottleneckType : has
